- Fixing collapse button hover color

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -14,6 +14,9 @@
   /*--ifm-color-primary-lightest: #90b8ec;*/
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 
+  /* Change collapse button color */
+  --docusaurus-collapse-button-bg: #F2F2F2 !important;
+  --docusaurus-collapse-button-bg-hover: #dadada !important;
   /*!* Search style var *!*/
   --ifm-navbar-search-input-placeholder-color: var(--ifm-color-emphasis-800);
 
@@ -44,6 +47,10 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
   --ifm-navbar-background-color: #1A1B1E;
   --ifm-menu-color-background-active: #27292F;
+
+  /* Change collapse button color */
+  --docusaurus-collapse-button-bg: #272729 !important;
+  --docusaurus-collapse-button-bg-hover: #232325 !important;
 
   /*!* Search style var *!*/
   --ifm-navbar-search-input-icon: url('data:image/svg+xml;utf8,<svg fill="white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" height="16px" width="16px"><path d="M6.02945,10.20327a4.17382,4.17382,0,1,1,4.17382-4.17382A4.15609,4.15609,0,0,1,6.02945,10.20327Zm9.69195,4.2199L10.8989,9.59979A5.88021,5.88021,0,0,0,12.058,6.02856,6.00467,6.00467,0,1,0,9.59979,10.8989l4.82338,4.82338a.89729.89729,0,0,0,1.29912,0,.89749.89749,0,0,0-.00087-1.29909Z" /></svg>');
